--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="logo">
-        <img src="gameporium.png" style="height: 10%; width: 10%; border-radius: 22%; margin-bottom: 1.5%;">
+        <img src="gameporium.png" style="height: 25vh; width: 25vh; border-radius: 22%; margin-bottom: 1.5%;">
     </div>
 
     <div class="table">
