--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 </head>
 
 <body>
     <div class="logo">
-        <img src="gameporium.png" style="height: 25vh; width: 25vh; border-radius: 22%; margin-bottom: 1.5%;">
+        <img src="gameporium.png" class="animate__animated animate__fadeInDown" style="height: 25vh; width: 25vh; border-radius: 22%; margin-bottom: 1.5%;">
     </div>
 
-    <div class="table">
+    <div class="animate__animated animate__fadeInUp table">
     <table border="1" cellpadding="8" cellspacing="0">
         <thead>
             <tr>
