--- a/index.html
+++ b/index.html
@@ -25,170 +25,11 @@
     <table border="1" cellpadding="8" cellspacing="0">
         <thead>
             <tr>
-                <th>Payment Method</th>
-                <th>SellApp</th>
-                <th>Eldorado</th>
-                <th>Discord</th>
+                <th><a href="https://www.eldorado.gg/users/BloxGen?tab=Offers&category=CustomItem">Eldorado</a></th>
+                <th><a href="https://discord.gg/4Gc22ptxRB">Discord</a></th>
+                <th><a href="https://www.roblox.com/communities/514461297/Gameporium-xyz#!/about">Roblox</a></th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>Bitcoin</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Ethereum</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Litecoin</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Polygon</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>USDC ERC20 (ETH)</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>SHIB ERC20 (ETH)</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>USDT BEP20 (BNB)</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Monero</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>BNB</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Tron</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>USDT ERC20 (ETH)</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>UNI ERC20 (ETH)</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>DAI ERC20 (ETH)</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>USDC BEP20 (BNB)</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>CashApp</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>PayPal</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Credit / Debit Card</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-            </tr>
-            <tr>
-                <td>Klarna</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="no">✖</td>
-            </tr>
-            <tr>
-                <td>Google Pay</td>
-                <td class="yes">✔</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-            </tr>
-            <tr>
-                <td>Apple Pay</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="no">✖</td>
-            </tr>
-            <tr>
-                <td>Robux</td>
-                <td class="no">✖</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>MM2 Items</td>
-                <td class="no">✖</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Venmo</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Rewarble</td>
-                <td class="no">✖</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Gift Cards</td>
-                <td class="no">✖</td>
-                <td class="no">✖</td>
-                <td class="yes">✔</td>
-            </tr>
-            <tr>
-                <td>Amazon Pay</td>
-                <td class="yes">✔</td>
-                <td class="no">✖</td>
-                <td class="no">✖</td>
-            </tr>
-        </tbody>
     </table>
     </div>
 </body>
